--- a/README
+++ b/README
@@ -17,7 +17,8 @@ Features:
 REQUIREMENTS
 ------------
 
-$ sudo apt-get install build-essential libboost-all-dev libssl-dev
+$ sudo apt-get install build-essential libboost-all-dev libssl-dev dnsutils
+
 
 USAGE
 -----
